--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 	<div id="canvas">
 		<svg>
-			<circle cx="40" cy="60" r="10" fill="pink"></circle>
+			<!-- <circle cx="40" cy="60" r=20 fill="green"></circle> !-->
 		</svg>
 	</div>
-
-	<script src = "index.js"></script>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
