--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 </head>
 <body>
 	<div id="canvas">
-		<svg>
-			<!-- <circle cx="40" cy="60" r=20 fill="green"></circle> !-->
-		</svg>
 	</div>
-	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script src="./node_modules/d3/dist/d3.js"></script>
 	<script src="index.js"></script>
 </body>
 </html>
